Adds Thymeleaf [acceptance test skip]